# otel-ebpf

./: Cargo.toml  build.rs  probe.bpf.c
src/: main.rs  manager.rs  probe.rs
