[package]
name = "otel-ebpf"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
libbpf-rs = "0.24"
libbpf-sys = "1.2"
anyhow = "1.0"
opentelemetry = { version = "0.27.1" }
opentelemetry_sdk = {version = "0.27"}
opentelemetry-stdout = {version = "0.27"}
nix = "0.29"
object = "0.36"
goblin = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
proc-maps = "0.4"